<resources>
    <string name="app_name">Teacher-AM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Teacher-AM</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Logout</string>

    <string name="menu_home">Today Marked Attendance</string>
    <string name="menu_gallery">Subjects</string>
    <string name="menu_slideshow">Mark Attendance</string>
    <string name="menu_edit">Settings</string>
    <string name="attendance">Student Attendance</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>