<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.teacher.TeacherAM.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.teacher.TeacherAM.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.teacher.TeacherAM.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />


    <fragment
        android:id="@+id/settings"
        android:name="com.teacher.TeacherAM.ui.settings.Settings"
        android:label="@string/menu_edit"
        tools:layout="@layout/fragment_edit_attendance" />

    <fragment
        android:id="@+id/studentAttendance"
        android:name="com.teacher.TeacherAM.ui.student_Attendance.StudentAttendance"
        android:label="@string/attendance"
        tools:layout="@layout/fragment_student_attendance" />

</navigation>